--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,9 +15,9 @@ This portfolio is built with **Next.js** and a library called [Nextra](https://n
 ---
 
 <div>
-  Twitter [@yourname](https://twitter.com/yourname)
+  site [maaloma](https://maaloma.tech/)
   <br />
-  GitHub [@yourname](https://github.com/yourname)
+  about [maaloma](https://maaloma.tech/%d8%ad%d9%88%d9%84%d9%86%d8%a7-about-us/)
   <br />
   Instagram [@yourname](https://instagram.com/yourname)
   <br />
